--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,22 @@
 
 /* Nimm html oder body für diese grundsätzlichen Styles, die sich vererben sollen */
 /* Der universal selector (*) sollte nur für box-sizing: border-box; genommen werden. */
-* {
+body {
     color: whitesmoke;
     font-family: sans-serif;
 }
 
 /* Bitte space zwischen selector und öffnender geschweiften Klammer (überall) */
-html{
+html {
     height: 100%;
 }
 
-h1{
+h1 {
     font-size: 50px;
 }
 
-header
-{   padding: 30px;
+header {   
+    padding: 30px;
     font-size: 22px;
     background: #ed9871;
     border-radius: 6px;
@@ -25,18 +25,18 @@ header
     text-shadow: 0.2px 0.2px 0.2px white;
 }
 
-.image{
+.image {
     /* Space nach Doppelpunkt */
-    margin:30px;
+    margin: 30px;
     height: 250px;
     width: cover;
 }
 
-.container{
+.container {
     padding: 20px;
 }
 
-.info-box{
+.info-box {
     border-radius: 6px;
     display: flex;
     flex-direction: row;
@@ -46,71 +46,70 @@ header
     border-radius: 6px;
 }
 
-.info-box-column{
+.info-box-column {
     margin-top: 40px;
     display: flex;
     flex-direction: column;
     align-content: center;
 }
 
-.flexbox{
+.flexbox {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
 
-.btn{
+.btn {
     background: grey;
     margin: 5px;
     padding: 4px;
     color: white;
 }
 
-.btn-special{
+.btn-special {
     background:rgb(216, 120, 136);
     margin: 5px;
     padding: 4px;
 }
 
-.contact-link{
+.contact-link {
     margin: 10px;
     padding: 10px;
 }
 
-.stage-image{
+.stage-image {
     /* Der Ordnername "bilder" ist nicht gut. English, please (img or images) */
-    background-image: url("../bilder/juja-han-150002-unsplash.jpg");
+    background-image: url("../images/juja-han-150002-unsplash.jpg");
     background-size: cover;
     background-position: center;
 }
 
-.contact-image{
-    background-image: url("../bilder/tools-for-motivation-371416-unsplash.jpg");
+.contact-image {
+    background-image: url("../images/tools-for-motivation-371416-unsplash.jpg");
     filter: saturate(60%);
     background-size: cover;
     background-position: top;
 }
 
-li{
+li {
     margin-bottom: 10px;
     font-size: 20px;
 }
 
-.font-pacifico{
+.font-pacifico {
     font-family: 'Pacifico', Helvetica, sans-serif;
     color: whitesmoke;
     font-size: 27px;
     font-weight: 100;
 }
 
-a[href^="https://"]
-{
+a[href^="https://"] {
     color: white;
     background: rgb(235, 126, 93);
     width: 20px;
     height: 20px;
 }
 
-.card{
+.card {
     background: teal;
 }
