--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,25 @@
 
-/* Nimm html oder body für diese grundsätzlichen Styles, die sich vererben sollen */
-/* Der universal selector (*) sollte nur für box-sizing: border-box; genommen werden. */
 body {
     color: whitesmoke;
     font-family: sans-serif;
 }
 
-/* Bitte space zwischen selector und öffnender geschweiften Klammer (überall) */
 html {
     height: 100%;
 }
 
 h1 {
     font-size: 50px;
+    margin-bottom: 200px;
+}
+
+h2, h4 {
+    margin-bottom: 35px;
+}
+
+h6 {
+    margin-top: 70px;
+    margin-left: 10px;
 }
 
 header {   
@@ -26,7 +33,6 @@ header {
 }
 
 .image {
-    /* Space nach Doppelpunkt */
     margin: 30px;
     height: 250px;
     width: cover;
@@ -78,7 +84,6 @@ header {
 }
 
 .stage-image {
-    /* Der Ordnername "bilder" ist nicht gut. English, please (img or images) */
     background-image: url("../images/juja-han-150002-unsplash.jpg");
     background-size: cover;
     background-position: center;
@@ -112,4 +117,13 @@ a[href^="https://"] {
 
 .card {
     background: teal;
+}
+
+.button-vita {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 0px;
+    margin-top: 20px;
+    margin-left: 20px;
 }
