--- a/css/styles.css
+++ b/css/styles.css
@@ -126,4 +126,179 @@ a[href^="https://"] {
     padding-bottom: 0px;
     margin-top: 20px;
     margin-left: 20px;
+    transition: transform 1s;
 }
+
+body:hover .button-vita {
+    transform: rotate(360deg) scale(1.2);
+    background-color: rgb(237, 123, 68);
+}
+
+.cloud{
+  display: none;
+}
+
+.tropfen {
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 40px solid steelblue;
+  border-radius: 50px;
+  margin-bottom: 8px;
+}
+
+.wolkenball-1 {
+  height: 130px;
+  width: 130px;
+  border-radius: 50%;
+  transform: translateX(50px);
+  background: lightblue;
+}
+
+.wolkenball-2 {
+  height: 130px;
+  width: 130px;
+  border-radius: 50%;
+  transform: translateY(-40px);
+  background: lightblue;
+}
+
+.wolkenball-3 {
+  height: 130px;
+  width: 130px;
+  border-radius: 50%;
+  transform: translateX(-50px);
+  background: lightblue;
+}
+
+.regen-1 {
+  animation: es-regnet-1 6s infinite;
+  animation-fill-mode: forwards;
+}
+
+@keyframes es-regnet-1 {
+  20% {
+    transform: translateY(30px);
+  }
+  
+  50% {
+    transform: translateY(60px);
+  }
+  
+  99% {
+    transform: translateY(120px);
+  } 
+  100% {
+      opacity: 0;
+    }
+  }
+  
+  .regen-2 {
+  animation: es-regnet-2 12s infinite;
+  animation-fill-mode: forwards;
+}
+
+@keyframes es-regnet-2 {
+  20% {
+    transform: translateY(20px);
+  }
+  
+  50% {
+    transform: translateY(40px);
+  }
+  
+  99% {
+    transform: translateY(100px);
+  }
+  100% {
+      opacity: 0;
+    }
+  }
+  
+  .regen-3 {
+  animation: es-regnet-3 4s infinite;
+  animation-fill-mode: forwards;
+}
+
+@keyframes es-regnet-3 {
+  20% {
+    transform: translateY(10px);
+  }
+  
+  50% {
+    transform: translateY(20px);
+  }
+  
+  99% {
+    transform: translateY(40px);
+  }
+  100% {
+      opacity: 0;
+    }
+  }
+  
+  .regen-4 {
+  animation: es-regnet-4 15s infinite;
+  animation-fill-mode: forwards;
+}
+
+@keyframes es-regnet-4 {
+  20% {
+    transform: translateY(25px);
+  }
+  
+  50% {
+    transform: translateY(50px);
+  }
+  
+  99% {
+    transform: translateY(70px);
+  }
+  100% {
+      opacity: 0;
+    }
+  }
+  
+  .regen-5 {
+  animation: es-regnet-5 10s infinite;
+  animation-fill-mode: forwards;
+}
+
+@keyframes es-regnet-5 {
+  20% {
+    transform: translateY(30px);
+  }
+  
+  50% {
+    transform: translateY(60px);
+  }
+  
+  99% {
+    transform: translateY(120px);
+  }
+  100% {
+      opacity: 0;
+    }
+  }
+  
+  .regen-6 {
+  animation: es-regnet-6 10s infinite;
+  animation-fill-mode: forwards;
+}
+
+@keyframes es-regnet-6 {
+  20% {
+    transform: translateY(10px);
+  }
+  
+  50% {
+    transform: translateY(20px);
+  }
+  
+  99% {
+    transform: translateY(40px);
+  } 
+  100% {
+      opacity: 0;
+  }}
