Change cloud button

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -78,6 +78,11 @@ header {
     padding: 4px;
 }
 
+body:hover .btn-with-border {
+    background: steelblue;
+    border: 1px solid steelblue;
+}
+
 .contact-link {
     margin: 10px;
     padding: 10px;
@@ -154,7 +159,7 @@ body:hover .button-vita {
   width: 130px;
   border-radius: 50%;
   transform: translateX(50px);
-  background: lightblue;
+  background: rgb(135, 200, 222);
 }
 
 .wolkenball-2 {
@@ -162,7 +167,7 @@ body:hover .button-vita {
   width: 130px;
   border-radius: 50%;
   transform: translateY(-40px);
-  background: lightblue;
+  background: rgb(135, 200, 222);
 }
 
 .wolkenball-3 {
@@ -170,11 +175,11 @@ body:hover .button-vita {
   width: 130px;
   border-radius: 50%;
   transform: translateX(-50px);
-  background: lightblue;
+  background: rgb(135, 200, 222);
 }
 
 .regen-1 {
-  animation: es-regnet-1 6s infinite;
+  animation: es-regnet-1 1s infinite;
   animation-fill-mode: forwards;
 }
 
@@ -196,7 +201,7 @@ body:hover .button-vita {
   }
   
   .regen-2 {
-  animation: es-regnet-2 12s infinite;
+  animation: es-regnet-2 10s infinite;
   animation-fill-mode: forwards;
 }
 
@@ -240,7 +245,7 @@ body:hover .button-vita {
   }
   
   .regen-4 {
-  animation: es-regnet-4 15s infinite;
+  animation: es-regnet-4 8s infinite;
   animation-fill-mode: forwards;
 }
 
@@ -262,7 +267,7 @@ body:hover .button-vita {
   }
   
   .regen-5 {
-  animation: es-regnet-5 10s infinite;
+  animation: es-regnet-5 2s infinite;
   animation-fill-mode: forwards;
 }
 
@@ -290,15 +295,15 @@ body:hover .button-vita {
 
 @keyframes es-regnet-6 {
   20% {
-    transform: translateY(10px);
+    transform: translateY(40px);
   }
   
   50% {
-    transform: translateY(20px);
+    transform: translateY(80px);
   }
   
   99% {
-    transform: translateY(40px);
+    transform: translateY(160px);
   } 
   100% {
       opacity: 0;
